# agent-governance

./: .gitignore  LICENSE  NOTICE  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  styles.css  types.ts
examples/: demo_agent.py  llm_reviewer_demo.py  run_console.py
governance/: __init__.py  audit.py  canonical.py  capability.py  console.py  gates.py  governor.py  halt.py  policy.py  registry.py  review.py  safety.py  types.py
governance/reviewers/: __init__.py  hardened.py  llm.py
tests/: test_audit_chain.py  test_canonical.py  test_capability.py  test_dimension_parse.py  test_failclosed.py  test_governor.py  test_halt.py  test_hardened_review.py  test_llm_review.py  test_reviewer_robustness.py
